--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="styles/dark.css">
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <span class="rec">REС</span>
+      <div class="right_corner">
+
+        <div class="ellipse"></div>
+      </div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -34,7 +45,12 @@
           </li>
         </ul>
       </nav>
+      <span class="main_header">no focus</span>
+      <span class="main_title">Что делать, когда не можешь делать ничего</br>
+Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
+      <div class="left_corner"></div>
     </header>
     <script src="./scripts/script.js"></script>
+  <div class="main_content"></div>
   </body>
 </html>
