--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="styles/dark.css">
+
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -46,11 +47,69 @@
         </ul>
       </nav>
       <span class="main_header">no focus</span>
-      <span class="main_title">Что делать, когда не можешь делать ничего</br>
+      <span class="title">Что делать, когда не можешь делать ничего</br>
 Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
       <div class="left_corner"></div>
     </header>
     <script src="./scripts/script.js"></script>
-  <div class="main_content"></div>
+  <div class="main_content">
+    <article class="content__1">
+      <span class="article__title">Почему сосредоточиться так сложно</span>
+      <div class="article__block__1">
+        <div class="article__template">
+          <span class="main_title">Многозадачность</span>
+          <span class="description">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</span>
+        </div>
+        <div class="article__template">
+          <span class="main_title">Дофамин</span>
+          <span class="description">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</span>
+        </div>
+      </div>
+    </article>
+    <article class="content__2">
+        <span class="article__title">Что снижает концентрацию внимания?</span>
+        <div class="article__block__2">
+        <div class="article__template">
+          <span class="main_title">Многозадачность</span>
+          <span class="description">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</span>
+        </div>
+        <div class="article__template">
+          <span class="main_title">Еда</span>
+          <span class="description">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</span>
+        </div>
+        <div class="article__template">
+          <span class="main_title">Гаджеты</span>
+          <span class="description">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</span>
+        </div>
+      </div>
+    </article>
+    <article class="content__1">
+      <span class="article__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</span>
+      <div class="article__block__1">
+        <div class="article__template">
+          <span class="main_title">5 простых (на самом деле не очень) советов</span>
+          <span class="main_title">Представьте небо и облака</span>
+          <span class="description">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</span>
+        </div>
+        <div class="article__template">
+          <span class="main_title">Включите музыку</span>
+          <span class="description">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист c «белым шумом» или нейромузыкой.</span>
+        </div>
+        <div class="article__template">
+          <span class="main_title">Прогуляйтесь</span>
+          <span class="description">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</span>
+        </div>
+        <div class="article__template">
+          <span class="main_title">Хорошо ешьте</span>
+          <span class="description">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</span>
+        </div>
+        <div class="article__template">
+          <span class="main_title">Читайте</span>
+          <span class="description">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</span>
+        </div>
+      </div>
+    </article>
+  </div>
+
   </body>
 </html>
