--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
       <div class="article__block__1">
         <div class="article__template">
           <span class="main_title">5 простых (на самом деле не очень) советов</span>
-          <span class="main_title">Представьте небо и облака</span>
+          <span class="main_title regular">Представьте небо и облака</span>
           <span class="description">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</span>
         </div>
         <div class="article__template">
-          <span class="main_title">Включите музыку</span>
+          <span class="main_title regular">Включите музыку</span>
           <span class="description">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист c «белым шумом» или нейромузыкой.</span>
         </div>
         <div class="article__template">
-          <span class="main_title">Прогуляйтесь</span>
+          <span class="main_title regular">Прогуляйтесь</span>
           <span class="description">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</span>
         </div>
         <div class="article__template">
-          <span class="main_title">Хорошо ешьте</span>
+          <span class="main_title regular">Хорошо ешьте</span>
           <span class="description">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</span>
         </div>
         <div class="article__template">
-          <span class="main_title">Читайте</span>
+          <span class="main_title regular">Читайте</span>
           <span class="description">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</span>
         </div>
       </div>
