--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <header class="header decorated-zone">
       <span class="rec">REС</span>
       <div class="right_corner">
-
         <div class="ellipse"></div>
       </div>
       <nav class="header__theme-menu">
@@ -88,7 +87,7 @@
       <div class="article__block__1">
         <div class="article__template">
           <span class="main_title">5 простых (на самом деле не очень) советов</span>
-          <span class="main_title regular">Представьте небо и облака</span>
+          <span class="main_title regular extra_margin">Представьте небо и облака</span>
           <span class="description">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</span>
         </div>
         <div class="article__template">
