Pictures and footer added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
         </ul>
       </nav>
       <h1 class="main_title">no focus</h1>
-      <h2 class="main_subtitle">Что делать, когда не можешь делать ничего</br>
-Или почему нам так сложно сконцентрироваться, особенно когда очень надо</h2>
+      <h2 class="main_subtitle">
+        <span>Что делать, когда не можешь делать ничего </span>
+        <span>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
+      </h2>
       <div class="left_corner"></div>
     </header>
     <script src="./scripts/script.js"></script>
@@ -103,13 +105,28 @@
           <h4 class="article_subtitle regular">Хорошо ешьте</h4>
           <span class="description">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</span>
         </article>
-        <article class="article__template">
+        <article class="article_template">
           <h4 class="article_subtitle regular">Читайте</h4>
           <span class="description">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</span>
         </article>
       </div>
     </section>
+    <section class="picture_block">
+      <h2 class="article_subtitle">А можно в картинках?</h2>
+      <div class="focus_images">
+        <img src="./images/sunset.png" class="picture first" alt="Закат. Солнце опускается за горы">
+        <img src="./images/ice-cream.png" class="picture second" alt="4 шарика мороженного похожие на мордочки катят лежат в миски горкой">
+        <img src="./images/tape.png" class="picture third" alt="Кассета магнитофона на фоне плеера в пиксельной графике">
+        <img src="./images/books.png" class="picture fourth" alt="Стопка книг. Наверху стопки стоит чашка с кофе. Книга в основании подглядывает">
+        <img src="./images/street.png" class="picture fifth" alt="Улица в феолетово розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца">
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="right_corner"></div>
+    <span class="main_title">focus</span>
+    <div class="left_corner"></div>
+  </footer>
 
   </body>
 </html>
