--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <title>Сложно сосредоточиться</title>
 
   </head>
@@ -60,7 +63,7 @@
       <div class="article_block_1">
         <article class="article_template">
           <h3 class="article_subtitle">Многозадачность</h3>
-          <span class="description">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</span>
+          <span class="description">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="outer_article" href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</span>
         </article>
         <div class="article_template">
           <h3 class="article_subtitle">Дофамин</h3>
@@ -114,11 +117,31 @@
     <section class="picture_block">
       <h2 class="article_subtitle">А можно в картинках?</h2>
       <div class="focus_images">
-        <img src="./images/sunset.png" class="picture first" alt="Закат. Солнце опускается за горы">
-        <img src="./images/ice-cream.png" class="picture second" alt="4 шарика мороженного похожие на мордочки катят лежат в миски горкой">
-        <img src="./images/tape.png" class="picture third" alt="Кассета магнитофона на фоне плеера в пиксельной графике">
-        <img src="./images/books.png" class="picture fourth" alt="Стопка книг. Наверху стопки стоит чашка с кофе. Книга в основании подглядывает">
-        <img src="./images/street.png" class="picture fifth" alt="Улица в феолетово розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца">
+        <img src="./images/sunset.png"
+             class="picture first"
+             alt="Закат. Солнце опускается за горы"
+             loading="lazy"
+        >
+        <img src="./images/ice-cream.png"
+             class="picture second"
+             alt="4 шарика мороженного похожие на мордочки катят лежат в миски горкой"
+             loading="lazy"
+        >
+        <img src="./images/tape.png"
+             class="picture third"
+             alt="Кассета магнитофона на фоне плеера в пиксельной графике"
+             loading="lazy"
+        >
+        <img src="./images/books.png"
+             class="picture fourth"
+             alt="Стопка книг. Наверху стопки стоит чашка с кофе. Книга в основании подглядывает"
+             loading="lazy"
+        >
+        <img src="./images/street.png"
+             class="picture fifth"
+             alt="Улица в феолетово розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца"
+             loading="lazy"
+        >
       </div>
     </section>
   </main>
