--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <title>Сложно сосредоточиться</title>
-
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -147,9 +146,8 @@
   </main>
   <footer class="footer">
     <div class="right_corner"></div>
-    <span class="main_title">focus</span>
+    <h5 class="main_title">focus</h5>
     <div class="left_corner"></div>
   </footer>
-
   </body>
 </html>
