Psedo class styles for images

--- a/index.html
+++ b/index.html
@@ -110,33 +110,38 @@
     </section>
     <section class="picture_block">
       <h2 class="article_subtitle">А можно в картинках?</h2>
-      <div class="focus_images">
-        <img src="./images/sunset.png"
-             class="picture first"
-             alt="Закат. Солнце опускается за горы"
-             loading="lazy"
-        >
-        <img src="./images/ice-cream.png"
-             class="picture second"
-             alt="4 шарика мороженного похожие на мордочки катят лежат в миски горкой"
-             loading="lazy"
-        >
-        <img src="./images/tape.png"
-             class="picture third"
-             alt="Кассета магнитофона на фоне плеера в пиксельной графике"
-             loading="lazy"
-        >
-        <img src="./images/books.png"
-             class="picture fourth"
-             alt="Стопка книг. Наверху стопки стоит чашка с кофе. Книга в основании подглядывает"
-             loading="lazy"
-        >
-        <img src="./images/street.png"
-             class="picture fifth"
-             alt="Улица в феолетово розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца"
-             loading="lazy"
-        >
-      </div>
+      <ul class="focus_images">
+        <li class="picture">
+          <img src="./images/sunset.png"
+               class="picture_grid"
+               alt="Закат. Солнце опускается за горы"
+               loading="lazy">
+        </li>
+        <li class="picture">
+          <img src="./images/ice-cream.png"
+               class="picture_grid"
+               alt="4 шарика мороженного похожие на мордочки катят лежат в миски горкой"
+               loading="lazy">
+        </li>
+        <li class="picture">
+          <img src="./images/tape.png"
+               class="picture_grid"
+               alt="Кассета магнитофона на фоне плеера в пиксельной графике"
+               loading="lazy">
+        </li>
+        <li class="picture">
+          <img src="./images/books.png"
+               class="picture_grid"
+               alt="Стопка книг. Наверху стопки стоит чашка с кофе. Книга в основании подглядывает"
+               loading="lazy">
+        </li>
+        <li class="picture">
+          <img src="./images/street.png"
+               class="picture_grid";
+               alt="Улица в феолетово розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца"
+               loading="lazy">
+        </li>
+      </ul>
     </section>
   </main>
   <footer class="footer">
