--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
       </h2>
     </header>
   <main class="main_content">
-    <section class="content_type_1">
+    <section class="content_type">
       <h2 class="article_title">Почему сосредоточиться так сложно</h2>
-      <div class="article_block_1">
+      <div class="article_block">
         <article class="article_template">
           <h3 class="article_subtitle">Многозадачность</h3>
           <p class="description">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="outer_article" target="_blank" href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </article>
-        <div class="article_template">
+        <article class="article_template">
           <h3 class="article_subtitle">Дофамин</h3>
           <p class="description">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
-        </div>
+        </article>
       </div>
     </section>
-    <section class="content_type_2">
+    <section class="content_type block">
       <h2 class="article_title">Что снижает концентрацию внимания?</h2>
-      <div class="article_block_2">
+      <div class="article_block three_columns">
         <article class="article_template">
           <h3 class="article_subtitle">Многозадачность</h3>
           <p class="description">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
@@ -82,11 +82,11 @@
         </article>
       </div>
     </section>
-    <section class="content_type_1">
+    <section class="content_type">
       <h2 class="article_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-      <div class="article_block_1">
+      <div class="article_block">
+        <h3 class="article_subtitle">5 простых (на самом деле не очень) советов</h3>
         <article class="article_template">
-          <h3 class="article_subtitle">5 простых (на самом деле не очень) советов</h3>
           <h4 class="article_subtitle regular extra_margin">Представьте небо и облака</h4>
           <p class="description">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
         </article>
@@ -146,7 +146,7 @@
   </main>
   <footer class="footer">
     <div class="right_corner"></div>
-    <h5 class="main_title">focus</h5>
+    <h2 class="main_title">focus</h2>
     <div class="left_corner"></div>
   </footer>
     <script src="./scripts/script.js"></script>
