--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="article_block">
         <h3 class="article_subtitle">5 простых (на самом деле не очень) советов</h3>
         <article class="article_template">
-          <h4 class="article_subtitle regular extra_margin">Представьте небо и облака</h4>
+          <h4 class="article_subtitle regular">Представьте небо и облака</h4>
           <p class="description">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
         </article>
         <article class="article_template">
@@ -144,10 +144,8 @@
       </ul>
     </section>
   </main>
-  <footer class="footer">
-    <div class="right_corner"></div>
+  <footer class="footer decorated-zone">
     <h2 class="main_title">focus</h2>
-    <div class="left_corner"></div>
   </footer>
     <script src="./scripts/script.js"></script>
   </body>
