Review fixies. Part IV

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </li>
         <li class="picture">
           <img src="./images/street.png"
-               class="picture_grid";
+               class="picture_grid"
                alt="Улица в феолетово розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца"
                loading="lazy">
         </li>
