Ul for pictures removed

--- a/index.html
+++ b/index.html
@@ -110,38 +110,26 @@
     </section>
     <section class="picture_block">
       <h2 class="article_subtitle">А можно в картинках?</h2>
-      <ul class="focus_images">
-        <li class="picture">
-          <img src="./images/sunset.png"
-               class="picture_grid"
-               alt="Закат. Солнце опускается за горы"
-               loading="lazy">
-        </li>
-        <li class="picture">
-          <img src="./images/ice-cream.png"
-               class="picture_grid"
-               alt="4 шарика мороженного похожие на мордочки катят лежат в миски горкой"
-               loading="lazy">
-        </li>
-        <li class="picture">
-          <img src="./images/tape.png"
-               class="picture_grid"
-               alt="Кассета магнитофона на фоне плеера в пиксельной графике"
-               loading="lazy">
-        </li>
-        <li class="picture">
-          <img src="./images/books.png"
-               class="picture_grid"
-               alt="Стопка книг. Наверху стопки стоит чашка с кофе. Книга в основании подглядывает"
-               loading="lazy">
-        </li>
-        <li class="picture">
-          <img src="./images/street.png"
-               class="picture_grid"
-               alt="Улица в феолетово розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца"
-               loading="lazy">
-        </li>
-      </ul>
+      <div class="focus_images">
+        <img src="./images/sunset.png"
+             class="picture"
+             alt="Закат. Солнце опускается за горы. На переднем плане море с птицами"
+             loading="lazy">
+        <img src="./images/ice-cream.png"
+             class="picture"
+             alt="4 шарика мороженного похожие на мордочки катят лежат в миске горкой">
+        <img src="./images/tape.png"
+             class="picture"
+             alt="Кассета от магнитофона на фоне плеера в пиксельной графике">
+        <img src="./images/books.png"
+             class="picture"
+             alt="Стопка книг. Наверху стопки стоит чашка с кофе. Книга в основании подглядывает"
+             loading="lazy">
+        <img src="./images/street.png"
+             class="picture"
+             alt="Улица в фиолетово-розовых тонах. Слева и справа от дороги стоят дома, в окнах которых отображается свет солнца"
+             loading="lazy">
+      </div>
     </section>
   </main>
   <footer class="footer decorated-zone">
