--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section class="content_type block">
       <h2 class="article_title">Что снижает концентрацию внимания?</h2>
-      <div class="article_block three_columns">
+      <div class="article_block article_block_type_why">
         <article class="article_template">
           <h3 class="article_subtitle">Многозадачность</h3>
           <p class="description">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
